NEW - bug 317648: [release] plan Mylyn 3.5 release https://bugs.eclipse.org/bugs/show_bug.cgi?id=317648

--- a/new/new-weekly.html
+++ b/new/new-weekly.html
@@ -72,90 +72,56 @@
 <table cellpadding="10" cellspacing="0">
 	<tr>
 		<td align="left" valign="top" width="15%" bgcolor="#E0D0E6">
-		<p align="right"><b>Bugzilla: Custom Workflow Support</b></p>
+		<p align="right"><b>Hudson Connector (Incubation): Enhancements</b></p>
 		</td>
 		<td valign="top" width="85%">
-		<p align="left">Bugzilla supports <a href="http://wiki.eclipse.org/index.php/Mylyn/User_Guide">configuration of custom workflows</a>.</p>
-		<p><img border="0" src="images/3.5/bugzilla-custom-workflow.png"></p>
-		</td>
-	</tr>
-	<tr>
-		<td colspan="2">
-		<hr>
-		</td>
-	</tr>
-	<tr>
-		<td align="left" valign="top" width="15%" bgcolor="#E0D0E6">
-		<p align="right"><b>Bugzilla: Author Decoration for Attachments</b></p>
-		</td>
-		<td valign="top" width="85%">
-		<p align="left">The attachment table highlights attachments submitted by the logged in user.</p>
-		<p><img border="0" src="images/3.5/attachment-table-decoration.png"></p>
-		</td>
-	</tr>
-	<tr>
-		<td colspan="2">
-		<hr>
-		</td>
-	</tr>
-	<tr>
-		<td align="left" valign="top" width="15%" bgcolor="#E0D0E6">
-		<p align="right"><b>Trac: Decoration for Stories</b></p>
-		</td>
-		<td valign="top" width="85%">
-		<p align="left">Trac tickets with type 'story' are decorated as stories.</p>
-		<p><img border="0" src="images/3.5/trac-stories.png"></p>
-		</td>
-	</tr>
-	<tr>
-		<td colspan="2">
-		<hr>
-		</td>
-	</tr>
-	<tr>
-		<td align="left" valign="top" width="15%" bgcolor="#E0D0E6">
-		<p align="right"><b>Trac: Mid-air collision detection support</b></p>
-		</td>
-		<td valign="top" width="85%">
-		<p align="left">If a Trac ticket has changed since it was last synchronized an error is displayed to avoid unintentional overwriting of changes. Please note that this requires a <a href="http://trac-hacks.org/ticket/5402">patched version of Trac's XML-RPC Plugin</a>.</p>
-		<p><img border="0" src="images/3.5/trac-mid-air-collision.png"></p>
-		</td>
-	</tr>
-	<tr>
-		<td colspan="2">
-		<hr>
-		</td>
-	</tr>
-	<tr>
-		<td align="left" valign="top" width="15%" bgcolor="#E0D0E6">
-		<p align="right"><b>Filter Matches are Highlighted in Search View</b></p>
-		</td>
-		<td valign="top" width="85%">
-		<p align="left">When task search results are filtered matches are highlighted to identify them more easily.</p>
-		<p><img border="0" src="images/3.5/search-result-highlighting.png"></p>
-		</td>
-	</tr>
-	<tr>
-		<td colspan="2">
-		<hr>
-		</td>
-	</tr>
-	<tr>
-		<td align="left" valign="top" width="15%" bgcolor="#E0D0E6">
-		<p align="right"><b>Team Repositories View</b></p>
-		</td>
-		<td valign="top" width="85%">
-		<p align="left">The Team Repositories view provides facilities for creating, managing and browsing team repositories such as build servers, task repositories, SCM repositores or review servers.</p>
-		<p><img border="0" src="images/3.5/team-repositories.png"></p>
+		<p align="left">The output of the last build can be viewed by selecting Show Output from the popup menu in the Builds view. Java stack traces are hyperlinked.</p>
+		<p><img border="0" src="images/3.5/builds-console.png"></p>
 		</td>
 	</tr>	
 	<tr>
 		<td align="left" valign="top" width="15%" bgcolor="#E0D0E6">
-		<p align="right"><b>Create Team Repositories</b></p>
+		<p align="right"><b></b></p>
 		</td>
 		<td valign="top" width="85%">
-		<p align="left">The repository wizard provides a common entry point for creating team repositories.</p>
-		<p><img border="0" src="images/3.5/team-repository-wizard.png"></p>
+		<p align="left">If a build requires parameters a dialog is displayed when it is run. Many thanks to Eike Stepper for providing a contribution.</p>
+		<p><img border="0" src="images/3.5/hudson-parameters.png"></p>
+		</td>
+	</tr>	
+	<tr>
+		<td align="left" valign="top" width="15%" bgcolor="#E0D0E6">
+		<p align="right"><b></b></p>
+		</td>
+		<td valign="top" width="85%">
+		<p align="left">The tooltip in the Builds shows details about the plan and last build.</p>
+		<p><img border="0" src="images/3.5/hudson-tooltip.png"></p>
+		</td>
+	</tr>	
+	<tr>
+		<td align="left" valign="top" width="15%" bgcolor="#E0D0E6">
+		<p align="right"><b></b></p>
+		</td>
+		<td valign="top" width="85%">
+		<p align="left">Popup notifications are displayed when the status of a build plan changes.</p>
+		<p><img border="0" src="images/3.5/builds-popup-notification.png"></p>
+		</td>
+	</tr>	
+	<tr>
+		<td align="left" valign="top" width="15%" bgcolor="#E0D0E6">
+		<p align="right"><b></b></p>
+		</td>
+		<td valign="top" width="85%">
+		<p align="left">The Builds view now shows the time of the last build and the weather icon is now displayed in the summary column.</p>
+		<p><img border="0" src="images/3.5/builds-last-built.png"></p>
+		</td>
+	</tr>	
+	<tr>
+		<td align="left" valign="top" width="15%" bgcolor="#E0D0E6">
+		<p align="right"><b></b></p>
+		</td>
+		<td valign="top" width="85%">
+		<p align="left">The presentation of the Builds view can be toggeled from the view menu and disabled plan can be fitered.</p>
+		<p><img border="0" src="images/3.5/builds-presentation.png"></p>
 		</td>
 	</tr>	
 	<tr>
@@ -165,7 +131,21 @@
 	</tr>
 	<tr>
 		<td align="left" valign="top" width="15%" bgcolor="#E0D0E6">
-		<p align="right"><b>Incubator: Hudson Connector</b></p>
+		<p align="right"><b>Notifications</b></p>
+		</td>
+		<td valign="top" width="85%">
+		<p align="left">The Commons component provides an extensible notification framework and a central preference page for configuring notifications.</p>
+		<p><img border="0" src="images/3.5/notification-preferences.png"></p>
+		</td>
+	</tr>	
+	<tr>
+		<td colspan="2">
+		<hr>
+		</td>
+	</tr>
+	<tr>
+		<td align="left" valign="top" width="15%" bgcolor="#E0D0E6">
+		<p align="right"><b>Hudson Connector (Incubation)</b></p>
 		</td>
 		<td valign="top" width="85%">
 		<p align="left">The Hudson connector, developed by Markus Knittig as part of <a href="http://wiki.eclipse.org/Mylyn/Hudson_Integration_for_Mylyn" target="_new">his Google Summer of Code project</a>, shows the status of build jobs in a Builds view.</p>
@@ -199,14 +179,113 @@
 		<p><img border="0" src="images/3.5/builds-view-icon.png"></p>
 		</td>
 	</tr>	
+	<tr>
+		<td colspan="2">
+		<hr>
+		</td>
+	</tr>
+	<tr>
+		<td align="left" valign="top" width="15%" bgcolor="#E0D0E6">
+		<p align="right"><b>Team Repositories View</b></p>
+		</td>
+		<td valign="top" width="85%">
+		<p align="left">The Team Repositories view provides facilities for creating, managing and browsing team repositories such as build servers, task repositories, SCM repositores or review servers.</p>
+		<p><img border="0" src="images/3.5/team-repositories.png"></p>
+		</td>
+	</tr>	
+	<tr>
+		<td align="left" valign="top" width="15%" bgcolor="#E0D0E6">
+		<p align="right"><b>Create Team Repositories</b></p>
+		</td>
+		<td valign="top" width="85%">
+		<p align="left">The repository wizard provides a common entry point for creating team repositories.</p>
+		<p><img border="0" src="images/3.5/team-repository-wizard.png"></p>
+		</td>
+	</tr>	
+	<tr>
+		<td colspan="2">
+		<hr>
+		</td>
+	</tr>
+	<tr>
+		<td align="left" valign="top" width="15%" bgcolor="#E0D0E6">
+		<p align="right"><b>Filter Matches are Highlighted in Search View</b></p>
+		</td>
+		<td valign="top" width="85%">
+		<p align="left">When task search results are filtered matches are highlighted to identify them more easily.</p>
+		<p><img border="0" src="images/3.5/search-result-highlighting.png"></p>
+		</td>
+	</tr>
+	<tr>
+		<td colspan="2">
+		<hr>
+		</td>
+	</tr>
+	<tr>
+		<td align="left" valign="top" width="15%" bgcolor="#E0D0E6">
+		<p align="right"><b>Trac: Mid-air collision detection support</b></p>
+		</td>
+		<td valign="top" width="85%">
+		<p align="left">If a Trac ticket has changed since it was last synchronized an error is displayed to avoid unintentional overwriting of changes. Please note that this requires a <a href="http://trac-hacks.org/ticket/5402">patched version of Trac's XML-RPC Plugin</a>.</p>
+		<p><img border="0" src="images/3.5/trac-mid-air-collision.png"></p>
+		</td>
+	</tr>
+	<tr>
+		<td colspan="2">
+		<hr>
+		</td>
+	</tr>
+	<tr>
+		<td align="left" valign="top" width="15%" bgcolor="#E0D0E6">
+		<p align="right"><b>Trac: Decoration for Stories</b></p>
+		</td>
+		<td valign="top" width="85%">
+		<p align="left">Trac tickets with type 'story' are decorated as stories.</p>
+		<p><img border="0" src="images/3.5/trac-stories.png"></p>
+		</td>
+	</tr>
+	<tr>
+		<td colspan="2">
+		<hr>
+		</td>
+	</tr>
+	<tr>
+		<td align="left" valign="top" width="15%" bgcolor="#E0D0E6">
+		<p align="right"><b>Bugzilla: Author Decoration for Attachments</b></p>
+		</td>
+		<td valign="top" width="85%">
+		<p align="left">The attachment table highlights attachments submitted by the logged in user.</p>
+		<p><img border="0" src="images/3.5/attachment-table-decoration.png"></p>
+		</td>
+	</tr>
+	<tr>
+		<td colspan="2">
+		<hr>
+		</td>
+	</tr>
+	<tr>
+		<td align="left" valign="top" width="15%" bgcolor="#E0D0E6">
+		<p align="right"><b>Bugzilla: Custom Workflow Support</b></p>
+		</td>
+		<td valign="top" width="85%">
+		<p align="left">Bugzilla supports <a href="http://wiki.eclipse.org/index.php/Mylyn/User_Guide">configuration of custom workflows</a>.</p>
+		<p><img border="0" src="images/3.5/bugzilla-custom-workflow.png"></p>
+		</td>
+	</tr>
 </table>
 
 <p>&nbsp;</p>
 <p><b>Bugs marked as New &amp; Noteworthy</b></p>
 
-<p>I20100626-2300</p>
+<p>Pending</p>
+<hr size='1'>
+<p>I20100829-0700</p>
 <ul>
-<li><a href='https://bugs.eclipse.org/bugs/show_bug.cgi?id=259291'>bug 259291</a>: add support for custom status workflow</li>
+<li><a href='https://bugs.eclipse.org/bugs/show_bug.cgi?id=272189'>bug 272189</a>: [api] provide notification provider API in commons</li>
+<li><a href='https://bugs.eclipse.org/bugs/show_bug.cgi?id=318541'>bug 318541</a>: [build] show popup notifications when build status changes</li>
+<li><a href='https://bugs.eclipse.org/bugs/show_bug.cgi?id=318652'>bug 318652</a>: [build] support streaming of console contents</li>
+<li><a href='https://bugs.eclipse.org/bugs/show_bug.cgi?id=323568'>bug 323568</a>: [build] add support for parameterized Hudson builds</li>
+<li><a href='https://bugs.eclipse.org/bugs/show_bug.cgi?id=323890'>bug 323890</a>: [build] show information about last build in tooltip</li>
 </ul>
 <hr size='1'>
 <p>I20100805-0500</p>
@@ -220,7 +299,10 @@
 <li><a href='https://bugs.eclipse.org/bugs/show_bug.cgi?id=308040'>bug 308040</a>: provide Hudson integration for Mylyn</li>
 </ul>
 <hr size='1'>
-<p>Pending</p>
+<p>I20100626-2300</p>
+<ul>
+<li><a href='https://bugs.eclipse.org/bugs/show_bug.cgi?id=259291'>bug 259291</a>: add support for custom status workflow</li>
+</ul>
 
 </body>
 </html>
