--- a/build_notes.html
+++ b/build_notes.html
@@ -11,6 +11,19 @@
 
 <h1>Mylyn Release Notes (3.4 Maintenance Stream)</h1>
 
+<p>Integration Build (September 01, 2010, 7:21 p.m.)</p>
+  <p>Problem reports updated</p>
+  <p>
+<a href="https://bugs.eclipse.org/bugs/show_bug.cgi?id=303570">Bug 303570</a>. remove from category action missing on repository tasks in the Uncategorized category (FIXED)<br>
+<a href="https://bugs.eclipse.org/bugs/show_bug.cgi?id=315514">Bug 315514</a>. validate settings button not disabled on the task repository settings page when a runnable is used (FIXED)<br>
+<a href="https://bugs.eclipse.org/bugs/show_bug.cgi?id=315921">Bug 315921</a>. fix attachment details nits (ASSIGNED)<br>
+<a href="https://bugs.eclipse.org/bugs/show_bug.cgi?id=316234">Bug 316234</a>. repository error dialog fails with SWTError if internal browser is not available (FIXED)<br>
+<a href="https://bugs.eclipse.org/bugs/show_bug.cgi?id=320923">Bug 320923</a>. authentication failure message does not appear (FIXED)<br>
+<a href="https://bugs.eclipse.org/bugs/show_bug.cgi?id=321054">Bug 321054</a>. [fwdport] (automatic) updates of configuration can cause loss of attribute options (ASSIGNED)<br>
+<a href="https://bugs.eclipse.org/bugs/show_bug.cgi?id=321948">Bug 321948</a>. open task from svn history throws npe (FIXED)<br>
+<a href="https://bugs.eclipse.org/bugs/show_bug.cgi?id=324257">Bug 324257</a>. [oslc] fetching children of null appearing during service discovery (FIXED)<br>
+  </p>
+
 <p>Integration Build (August 23, 2010, 3:05 p.m.)</p>
   <p>Problem reports updated</p>
   <p>
