NEW - bug 317648: [release] plan Mylyn 3.5 release https://bugs.eclipse.org/bugs/show_bug.cgi?id=317648

--- a/new/new-weekly.html
+++ b/new/new-weekly.html
@@ -72,6 +72,38 @@
 <table cellpadding="10" cellspacing="0">
 	<tr>
 		<td align="left" valign="top" width="15%" bgcolor="#E0D0E6">
+		<p align="right"><b>Hudson Connector (Incubation): Test Integration and More Enhancements</b></p>
+		</td>
+		<td valign="top" width="85%">
+		<p align="left">The test results of the last build can be viewed by selecting Show Test Results from the popup menu in the Builds view. Tests can be rerun locally from the JUnit view.</p>
+		<p><img border="0" src="images/3.5/builds-test-results.png"></p>
+		</td>
+	</tr>	
+	<tr>
+		<td align="left" valign="top" width="15%" bgcolor="#E0D0E6">
+		<p align="right"><b></b></p>
+		</td>
+		<td valign="top" width="85%">
+		<p align="left">The columns in the Builds view can be sorted by left-clicking on the column header. Columns can hidden by right clicking on the header. Column sizes are persisted now.</p>
+		<p><img border="0" src="images/3.5/builds-sort-table.png"></p>
+		</td>
+	</tr>	
+	<tr>
+		<td align="left" valign="top" width="15%" bgcolor="#E0D0E6">
+		<p align="right"><b></b></p>
+		</td>
+		<td valign="top" width="85%">
+		<p align="left">URLs are hyperlinked in the console.</p>
+		<p><img border="0" src="images/3.5/builds-console-hyperlink.png"></p>
+		</td>
+	</tr>	
+	<tr>
+		<td colspan="2">
+		<hr>
+		</td>
+	</tr>
+	<tr>
+		<td align="left" valign="top" width="15%" bgcolor="#E0D0E6">
 		<p align="right"><b>Hudson Connector (Incubation): Enhancements</b></p>
 		</td>
 		<td valign="top" width="85%">
@@ -278,6 +310,13 @@
 <p><b>Bugs marked as New &amp; Noteworthy</b></p>
 
 <p>Pending</p>
+<hr size='1'>
+<p>I20100908-0700</p>
+<ul>
+<li><a href='https://bugs.eclipse.org/bugs/show_bug.cgi?id=323797'>bug 323797</a>: [build] provide UI integration to show test results in JUnit view</li>
+<li><a href='https://bugs.eclipse.org/bugs/show_bug.cgi?id=323921'>bug 323921</a>: [build] support hyperlinks in build console</li>
+<li><a href='https://bugs.eclipse.org/bugs/show_bug.cgi?id=323891'>bug 323891</a>: [build][api] persist column sizes in Builds view</li>
+</ul>
 <hr size='1'>
 <p>I20100829-0800</p>
 <ul>
