--- a/build_notes.html
+++ b/build_notes.html
@@ -11,6 +11,16 @@
 
 <h1>Mylyn Release Notes (3.4 Maintenance Stream)</h1>
 
+<p>Integration Build (September 09, 2010, 1:51 p.m.)</p>
+  <p>Problem reports updated</p>
+  <p>
+<a href="https://bugs.eclipse.org/bugs/show_bug.cgi?id=282436">Bug 282436</a>. [performance][context] remove From Context hangs eclipse (ASSIGNED)<br>
+<a href="https://bugs.eclipse.org/bugs/show_bug.cgi?id=302190">Bug 302190</a>. when checking out a project from SCM, don't add every single file to the context (ASSIGNED)<br>
+<a href="https://bugs.eclipse.org/bugs/show_bug.cgi?id=315921">Bug 315921</a>. fix attachment details nits (REOPENED)<br>
+<a href="https://bugs.eclipse.org/bugs/show_bug.cgi?id=322058">Bug 322058</a>. [cdt][outline] All methods are hidden when Group Methods is checked (FIXED)<br>
+<a href="https://bugs.eclipse.org/bugs/show_bug.cgi?id=324488">Bug 324488</a>. remove unnecessary dependencies from usage monitor (FIXED)<br>
+  </p>
+
 <p>Integration Build (September 01, 2010, 7:21 p.m.)</p>
   <p>Problem reports updated</p>
   <p>
