--- a/new/new-weekly.html
+++ b/new/new-weekly.html
@@ -72,6 +72,29 @@
 <table cellpadding="10" cellspacing="0">
 	<tr>
 		<td align="left" valign="top" width="15%" bgcolor="#E0D0E6">
+		<p align="right"><b>Hudson Connector (Incubation): Build Editor and History</b></p>
+		</td>
+		<td valign="top" width="85%">
+		<p align="left">Builds can be opened in an editor that displays build details on a single page: Status, Tests Results, Artifacts and Change Sets.</p>
+		<p><img border="0" src="images/3.5/builds-editor.png"></p>
+		</td>
+	</tr>	
+	<tr>
+		<td align="left" valign="top" width="15%" bgcolor="#E0D0E6">
+		<p align="right"><b></b></p>
+		</td>
+		<td valign="top" width="85%">
+		<p align="left">The History item in the popup menu of Builds view shows all builds of plan in the History. Builds are shown in an editor when opened from the History.</p>
+		<p><img border="0" src="images/3.5/builds-history.png"></p>
+		</td>
+	</tr>	
+	<tr>
+		<td colspan="2">
+		<hr>
+		</td>
+	</tr>
+	<tr>
+		<td align="left" valign="top" width="15%" bgcolor="#E0D0E6">
 		<p align="right"><b>Hudson Connector (Incubation): Test Integration and More Enhancements</b></p>
 		</td>
 		<td valign="top" width="85%">
@@ -310,6 +333,14 @@
 <p><b>Bugs marked as New &amp; Noteworthy</b></p>
 
 <p>Pending</p>
+<hr size='1'>
+<p>I20100926-0400</p>
+<ul>
+<li><a href='https://bugs.eclipse.org/bugs/show_bug.cgi?id=318259'>bug 318259</a>: [build] implement a build details editor</li>
+<li><a href='https://bugs.eclipse.org/bugs/show_bug.cgi?id=323795'>bug 323795</a>: [build] show change sets in build editor</li>
+<li><a href='https://bugs.eclipse.org/bugs/show_bug.cgi?id=326222'>bug 326222</a>: [build] show build artifacts in build editor</li>
+<li><a href='https://bugs.eclipse.org/bugs/show_bug.cgi?id=326218'>bug 326218</a>: [build] show build history in History view</li>
+</ul>
 <hr size='1'>
 <p>I20100908-0700</p>
 <ul>
