--- a/new/new-weekly.html
+++ b/new/new-weekly.html
@@ -75,7 +75,7 @@
 		<p align="right"><b>Hudson Connector (Incubation): Build Editor and History</b></p>
 		</td>
 		<td valign="top" width="85%">
-		<p align="left">Builds can be opened in an editor that displays build details on a single page: Status, Tests Results, Artifacts and Change Sets.</p>
+		<p align="left">Builds can be opened in an editor that displays build details on a single page: Status, tests results, artifacts and code changes.</p>
 		<p><img border="0" src="images/3.5/builds-editor.png"></p>
 		</td>
 	</tr>	
@@ -85,7 +85,7 @@
 		</td>
 		<td valign="top" width="85%">
 		<p align="left">The History item in the popup menu of Builds view shows all builds of plan in the History. Builds are shown in an editor when opened from the History.</p>
-		<p><img border="0" src="images/3.5/builds-history.png"></p>
+		<p><img border="0" src="images/3.5/build-history.png"></p>
 		</td>
 	</tr>	
 	<tr>
