--- a/new/new-weekly.html
+++ b/new/new-weekly.html
@@ -84,7 +84,7 @@
 		<p align="right"><b></b></p>
 		</td>
 		<td valign="top" width="85%">
-		<p align="left">The History item in the popup menu of Builds view shows all builds of plan in the History. Builds are shown in an editor when opened from the History.</p>
+		<p align="left">When History is selected in the popup menu of the Builds view all builds of a plan are shown in the History view. Builds are displayed in an editor when opened from the History.</p>
 		<p><img border="0" src="images/3.5/build-history.png"></p>
 		</td>
 	</tr>	
