NEW - bug 317648: [release] plan Mylyn 3.5 release https://bugs.eclipse.org/bugs/show_bug.cgi?id=317648

--- a/new/new-weekly.html
+++ b/new/new-weekly.html
@@ -89,6 +89,15 @@
 		</td>
 	</tr>	
 	<tr>
+		<td align="left" valign="top" width="15%" bgcolor="#E0D0E6">
+		<p align="right"><b></b></p>
+		</td>
+		<td valign="top" width="85%">
+		<p align="left">Tasks can easily be created from builds. The description is automatically pre-populated with a list of changed files and failed tests.</p>
+		<p><img border="0" src="images/3.5/build-new-task.png"></p>
+		</td>
+	</tr>	
+	<tr>
 		<td colspan="2">
 		<hr>
 		</td>
@@ -340,6 +349,7 @@
 <li><a href='https://bugs.eclipse.org/bugs/show_bug.cgi?id=323795'>bug 323795</a>: [build] show change sets in build editor</li>
 <li><a href='https://bugs.eclipse.org/bugs/show_bug.cgi?id=326222'>bug 326222</a>: [build] show build artifacts in build editor</li>
 <li><a href='https://bugs.eclipse.org/bugs/show_bug.cgi?id=326218'>bug 326218</a>: [build] show build history in History view</li>
+<li><a href='https://bugs.eclipse.org/bugs/show_bug.cgi?id=324371'>bug 324371</a>: [build] support creating tasks from builds</li>
 </ul>
 <hr size='1'>
 <p>I20100908-0700</p>
