--- a/new/new-weekly.html
+++ b/new/new-weekly.html
@@ -1,4 +1,7 @@
 <html>
+<head>
+<meta http-equiv="Content-Type" content="text/html; charset=UTF-8"/>
+</head> 
 <body bgcolor="FFFFFF">
 
 <h2>New in Weekly Builds</h2>
@@ -70,6 +73,29 @@
 <hr>
 
 <table cellpadding="10" cellspacing="0">
+	<tr>
+		<td align="left" valign="top" width="15%" bgcolor="#E0D0E6">
+		<p align="right"><b>Hudson Connector (Incubation): Automatic Server Discovery and Test Results</b></p>
+		</td>
+		<td valign="top" width="85%">
+		<p align="left">Torkild Ulvøy Resheim provided a great contribution that adds auto discovery for Hudson servers through ECF. When a server is dicovered a service message is displayed in the Builds view. The discovered server can be auto configured with two simple clicks.</p>
+		<p><img border="0" src="images/3.5/hudson-autodiscovery.png"></p>
+		</td>
+	</tr>	
+	<tr>
+		<td align="left" valign="top" width="15%" bgcolor="#E0D0E6">
+		<p align="right"><b></b></p>
+		</td>
+		<td valign="top" width="85%">
+		<p align="left">The build editor shows tests results in a tree that opens tests on double click.</p>
+		<p><img border="0" src="images/3.5/builds-editor-test-results.png"></p>
+		</td>
+	</tr>	
+	<tr>
+		<td colspan="2">
+		<hr>
+		</td>
+	</tr>
 	<tr>
 		<td align="left" valign="top" width="15%" bgcolor="#E0D0E6">
 		<p align="right"><b>Hudson Connector (Incubation): Build Editor and History</b></p>
@@ -342,6 +368,12 @@
 <p><b>Bugs marked as New &amp; Noteworthy</b></p>
 
 <p>Pending</p>
+<hr size='1'>
+<p>I20101010-2200</p>
+<ul>
+<li><a href='https://bugs.eclipse.org/bugs/show_bug.cgi?id=317890'>bug 317890</a>: [hudson][build] support auto discovery of Hudson servers</li>
+<li><a href='https://bugs.eclipse.org/bugs/show_bug.cgi?id=321191'>bug 321191</a>: [build] test results for build details editor</li>
+</ul>
 <hr size='1'>
 <p>I20100926-0400</p>
 <ul>
