NEW - bug 317648: [release] plan Mylyn 3.5 release https://bugs.eclipse.org/bugs/show_bug.cgi?id=317648

--- a/new/new-weekly.html
+++ b/new/new-weekly.html
@@ -78,7 +78,7 @@
 		<p align="right"><b>Hudson Connector (Incubation): Automatic Server Discovery and Test Results</b></p>
 		</td>
 		<td valign="top" width="85%">
-		<p align="left">Torkild Ulvøy Resheim provided a great contribution that adds auto discovery for Hudson servers through ECF. When a server is dicovered a service message is displayed in the Builds view. The discovered server can be auto configured with two simple clicks.</p>
+		<p align="left">Torkild Ulv&#248;y Resheim provided a great contribution that adds auto discovery for Hudson servers through ECF. When a server is dicovered a service message is displayed in the Builds view. The discovered server can be auto configured with two simple clicks.</p>
 		<p><img border="0" src="images/3.5/hudson-autodiscovery.png"></p>
 		</td>
 	</tr>	
