--- a/new/new-weekly.html
+++ b/new/new-weekly.html
@@ -75,7 +75,7 @@
 		<p align="right"><b>Hudson Connector (Incubation): Automatic Server Discovery and Test Results</b></p>
 		</td>
 		<td valign="top" width="85%">
-		<p align="left">Torkild Ulv&#248;y Resheim provided a great contribution that adds auto discovery for Hudson servers through ECF. When a server is dicovered a service message is displayed in the Builds view. The discovered server can be auto configured with two simple clicks.</p>
+		<p align="left">Torkild Ulv&#248;y Resheim provided a great contribution that adds auto discovery for Hudson servers through ECF. When a server is dicovered a service message is displayed in the Builds view and the server can be configured with two clicks.</p>
 		<p><img border="0" src="images/3.5/hudson-autodiscovery.png"></p>
 		</td>
 	</tr>	
@@ -84,7 +84,7 @@
 		<p align="right"><b></b></p>
 		</td>
 		<td valign="top" width="85%">
-		<p align="left">The build editor shows tests results in a tree that opens tests on double click.</p>
+		<p align="left">The build editor shows tests results in a tree that opens the corresponding Java file on double click.</p>
 		<p><img border="0" src="images/3.5/builds-editor-test-results.png"></p>
 		</td>
 	</tr>	
