--- a/builds/description.html
+++ b/builds/description.html
@@ -1,6 +1,4 @@
-The first goal of
-<a href="http://www.eclipse.org/mylyn/builds">Mylyn Builds</a>
-is integration of continuous integration and build systems and seamless
+Integration of continuous integration and build systems and seamless
 access to software build and assembly technologies. Mylyn users will be
 able to access continuous integration processes, control build execution
 and associate build results with tasks and context.
