NEW - bug 336131: update weekly New & Noteworthy https://bugs.eclipse.org/bugs/show_bug.cgi?id=336131

--- a/new/new-weekly.html
+++ b/new/new-weekly.html
@@ -72,6 +72,74 @@
 <table cellpadding="10" cellspacing="0">
 	<tr>
 		<td align="left" valign="top" width="15%" bgcolor="#E0D0E6">
+		<p align="right"><b>Preview of Gerrit Connector (Incubation)</b></p>
+		</td>
+		<td valign="top" width="85%">
+		<p align="left">A first preview version of the Gerrit Code Review connector is now available on the weekly update site.</p>
+		<p><img border="0" src="images/3.5/gerrit-update-site.png"></p>
+		</td>
+	</tr>	
+	<tr>
+		<td align="left" valign="top" width="15%" bgcolor="#E0D0E6">
+		<p align="right"><b></b></p>
+		</td>
+		<td valign="top" width="85%">
+		<p align="left">Gerrit repositories are configured in the same manner as task repositories.</p>
+		<p><img border="0" src="images/3.5/gerrit-repository-settings.png"></p>
+		</td>
+	</tr>	
+	<tr>
+		<td align="left" valign="top" width="15%" bgcolor="#E0D0E6">
+		<p align="right"><b>Task List Integration</b></p>
+		</td>
+		<td valign="top" width="85%">
+		<p align="left">Reviews are added to the Task List through queries.</p>
+		<p><img border="0" src="images/3.5/gerrit-query.png"></p>
+		</td>
+	</tr>	
+	<tr>
+		<td align="left" valign="top" width="15%" bgcolor="#E0D0E6">
+		<p align="right"><b></b></p>
+		</td>
+		<td valign="top" width="85%">
+		<p align="left">Reviews are tasks like any other: Reviews can be scheduled, activated and update notifications are managed in the Task List.</p>
+		<p><img border="0" src="images/3.5/gerrit-task-list.png"></p>
+		</td>
+	</tr>	
+	<tr>
+		<td align="left" valign="top" width="15%" bgcolor="#E0D0E6">
+		<p align="right"><b>Review Editor</b></p>
+		</td>
+		<td valign="top" width="85%">
+		<p align="left">Review tasks open in a rich editor.</p>
+		<p><img border="0" src="images/3.5/gerrit-editor-header.png"></p>
+		</td>
+	</tr>	
+	<tr>
+		<td align="left" valign="top" width="15%" bgcolor="#E0D0E6">
+		<p align="right"><b></b></p>
+		</td>
+		<td valign="top" width="85%">
+		<p align="left">Review comments and the most recent patch set are displayed in the editor (required online access).</p>
+		<p><img border="0" src="images/3.5/gerrit-editor.png"></p>
+		</td>
+	</tr>	
+	<tr>
+		<td align="left" valign="top" width="15%" bgcolor="#E0D0E6">
+		<p align="right"><b></b></p>
+		</td>
+		<td valign="top" width="85%">
+		<p align="left">Review files open in the compare editor. Comments are indicated in a ruler and displayed when hovering over the marker.</p>
+		<p><img border="0" src="images/3.5/gerrit-compare-editor.png"></p>
+		</td>
+	</tr>	
+	<tr>
+		<td colspan="2">
+		<hr>
+		</td>
+	</tr>
+	<tr>
+		<td align="left" valign="top" width="15%" bgcolor="#E0D0E6">
 		<p align="right"><b>Hudson Connector (Incubation): Automatic Server Discovery and Test Results</b></p>
 		</td>
 		<td valign="top" width="85%">
@@ -365,6 +433,12 @@
 <p><b>Bugs marked as New &amp; Noteworthy</b></p>
 
 <p>Pending</p>
+<hr size='1'>
+<p>I20110202-0132</p>
+<ul>
+<li><a href='https://bugs.eclipse.org/bugs/show_bug.cgi?id=306245'>bug 306245</a>: [gerrit] provide Gerrit integration for Mylyn</li>
+<li><a href='https://bugs.eclipse.org/bugs/show_bug.cgi?id=319977'>bug 319977</a>: wikitext-to-eclipse-help for Trac doesn't support images</li>
+</ul>
 <hr size='1'>
 <p>I20101010-2200</p>
 <ul>
