--- a/new/new-weekly.html
+++ b/new/new-weekly.html
@@ -72,10 +72,10 @@
 <table cellpadding="10" cellspacing="0">
 	<tr>
 		<td align="left" valign="top" width="15%" bgcolor="#E0D0E6">
-		<p align="right"><b>Preview of Gerrit Connector (Incubation)</b></p>
+		<p align="right"><b>Gerrit Connector (Incubation): Preview</b></p>
 		</td>
 		<td valign="top" width="85%">
-		<p align="left">A first preview version of the Gerrit Code Review connector is now available on the weekly update site.</p>
+		<p align="left">A first preview version of the Gerrit code review connector is now available on the weekly update site.</p>
 		<p><img border="0" src="images/3.5/gerrit-update-site.png"></p>
 		</td>
 	</tr>	
