NEW - bug 336131: update weekly New & Noteworthy https://bugs.eclipse.org/bugs/show_bug.cgi?id=336131

--- a/new/new-weekly.html
+++ b/new/new-weekly.html
@@ -72,6 +72,20 @@
 <table cellpadding="10" cellspacing="0">
 	<tr>
 		<td align="left" valign="top" width="15%" bgcolor="#E0D0E6">
+		<p align="right"><b>Hudson Connector (Incubation): Show Test Failures Only</b></p>
+		</td>
+		<td valign="top" width="85%">
+		<p align="left">The list of tests can be filtered to show failures only.</p>
+		<p><img border="0" src="images/3.5/builds-editor-filter-test-failures.png"></p>
+		</td>
+	</tr>	
+	<tr>
+		<td colspan="2">
+		<hr>
+		</td>
+	</tr>
+	<tr>
+		<td align="left" valign="top" width="15%" bgcolor="#E0D0E6">
 		<p align="right"><b>Gerrit Connector (Incubation): Preview</b></p>
 		</td>
 		<td valign="top" width="85%">
@@ -433,6 +447,14 @@
 <p><b>Bugs marked as New &amp; Noteworthy</b></p>
 
 <p>Pending</p>
+<hr size='1'>
+<p>I20110206-2022</p>
+<hr size='1'>
+<ul>
+<li><a href='https://bugs.eclipse.org/bugs/show_bug.cgi?id=288171'>bug 288171</a>: [api] enable maximize for any task editor part</li>
+<li><a href='https://bugs.eclipse.org/bugs/show_bug.cgi?id=335258'>bug 335258</a>: make o.e.m.htmltext available on update site</li>
+<li><a href='https://bugs.eclipse.org/bugs/show_bug.cgi?id=336464'>bug 336464</a>: support filtering of test results to only show failed tests</li>
+</ul>
 <hr size='1'>
 <p>I20110202-0132</p>
 <ul>
