NEW - bug 334968: create websites for sub-projects https://bugs.eclipse.org/bugs/show_bug.cgi?id=334968

--- a/builds/description.html
+++ b/builds/description.html
@@ -1,4 +1,9 @@
+<p>
+<b><a href="/mylyn/builds/">Mylyn Builds</a></b>
+</p>
+<p>
 Integration of continuous integration and build systems and seamless
 access to software build and assembly technologies. Mylyn users will be
 able to access continuous integration processes, control build execution
 and associate build results with tasks and context.
+</p>
