NEW - bug 334968: create websites for sub-projects https://bugs.eclipse.org/bugs/show_bug.cgi?id=334968

--- a/context/_index.html
+++ b/context/_index.html
@@ -15,21 +15,20 @@
 -->
 <div id="midcolumn">
 
-<h3>Mylyn Tasks</h3>
+<h3>Mylyn Context</h3>
 
 <p>
-The scope of the Mylyn Tasks project is integration with Agile, issue, bug and defect tracking servers. The project provides rich task editing, task list management and offline synchronization for ALM servers. The Tasks project is the central portion of the ALM integration framework used by Mylyn.
+The scope of the Mylyn Context project is usage monitoring, degree-of-interested modeling and the task-focused user extensions implementation for the Eclipse UI, which re-aligns the user experience around tasks and provides features such as workspace focusing and one-click multitasking. 
 </p>
 
 <p>
-	<img src="tasklist.png" alt="Mylyn Task List Screenshot">
+	<img src="context.png" alt="Mylyn Task-Focused Interface Screenshot">
 </p>
 </div>
 
 <div id="rightcolumn">
 	<h3>Committers</h3>
 		<ul>
-		<li>Frank Becker (Independent)</li>
 		<li>Mik Kersten (Tasktop Technologies)</li>
 		<li>Rob Elves (Tasktop Technologies)</li>
 		<li>Shawn Minto (Tasktop Technologies)</li>
