NEW - bug 334968: create websites for sub-projects https://bugs.eclipse.org/bugs/show_bug.cgi?id=334968

--- a/context/_index.html
+++ b/context/_index.html
@@ -22,7 +22,7 @@ The scope of the Mylyn Context project is usage monitoring, degree-of-interested
 </p>
 
 <p>
-	<img src="context.png" alt="Mylyn Task-Focused Interface Screenshot">
+	<img src="context.gif" alt="Mylyn Task-Focused Interface Screenshot">
 </p>
 </div>
 
