NEW - bug 317913: [releng] refine update site structure https://bugs.eclipse.org/bugs/show_bug.cgi?id=317913

--- a/new/new-weekly.html
+++ b/new/new-weekly.html
@@ -64,8 +64,19 @@
 	<li><a href="#framework">Framework and API (5)</a></li>
 </ul>
  -->
- 
-<p><b>Note: </b>Mylyn weekly builds now require <a href="https://bugs.eclipse.org/bugs/show_bug.cgi?id=313436">Eclipse 3.5 or later</a>.</p>
+
+<p><b>Note: </b>The Mylyn weekly update sites have moved:</p>
+
+<ul>
+	<li><b>Main Repository:</b><br>
+	&nbsp;&nbsp;<b><font color="#666666">http://</font>download.eclipse.org/mylyn/snapshots/weekly</b>&nbsp;&nbsp;(Eclipse
+	3.5, 3.6, 3.7)</li>
+	<li><b>Incubator Repository:</b><br>
+	&nbsp;&nbsp;<b><font color="#666666">http://</font>download.eclipse.org/mylyn/snapshots/incubator/3.5</b>&nbsp;&nbsp;(Eclipse
+	3.5, 3.6, 3.7)</li>
+</ul>
+
+<p>Mylyn weekly builds now require <a href="https://bugs.eclipse.org/bugs/show_bug.cgi?id=313436">Eclipse 3.5 or later</a>.</p>
 
 <hr>
 
