NEW - bug 317913: [releng] refine update site structure https://bugs.eclipse.org/bugs/show_bug.cgi?id=317913

--- a/new/new-weekly.html
+++ b/new/new-weekly.html
@@ -68,10 +68,11 @@
 <p><b>Note: </b>The Mylyn weekly update sites have moved:</p>
 
 <ul>
-	<li><b>Main Repository:</b><br>
+	<li>Main Repository:<br><br>
 	&nbsp;&nbsp;<b><font color="#666666">http://</font>download.eclipse.org/mylyn/snapshots/weekly</b>&nbsp;&nbsp;(Eclipse
 	3.5, 3.6, 3.7)</li>
-	<li><b>Incubator Repository:</b><br>
+	<li><hr size="1"/></li>
+	<li>Incubator Repository:<br><br>
 	&nbsp;&nbsp;<b><font color="#666666">http://</font>download.eclipse.org/mylyn/snapshots/incubator/3.5</b>&nbsp;&nbsp;(Eclipse
 	3.5, 3.6, 3.7)</li>
 </ul>
