--- a/new/new-weekly.html
+++ b/new/new-weekly.html
@@ -84,6 +84,73 @@
 <table cellpadding="10" cellspacing="0">
 	<tr>
 		<td align="left" valign="top" width="15%" bgcolor="#E0D0E6">
+		<p align="right"><b>Task-Focused Interface Improvements</b></p>
+		</td>
+		<td valign="top" width="85%">
+		<p align="left">Focused navigators display an affordance on hover that shows children of the clicked node. Pressing the plus icon is the equivalent of Alt+clicking.
+		When navigating using Alt+click or the hover affordance revealed nodes now remain visible until a node is added to the context.</p>  
+		<p align="left">When a task is activated that does not have a context auto focusing is now disabled by default. The behavior for tasks that have a context is unchanged.</p>
+		<p><img border="0" src="images/3.5/context-hover-affordance.png"></p>
+		</td>
+	</tr>	
+	<tr>
+		<td colspan="2">
+		<hr>
+		</td>
+	</tr>
+	<tr>
+		<td align="left" valign="top" width="15%" bgcolor="#E0D0E6">
+		<p align="right"><b>Bugzilla Connector: Boolean Charts</b></p>
+		</td>
+		<td valign="top" width="85%">
+		<p align="left">Bugzilla queries and task search can be specified using boolean charts that supported nested boolean expressions.</p>
+		<p><img border="0" src="images/3.5/bugzilla-search-charts.png"></p>
+		</td>
+	</tr>	
+	<tr>
+		<td colspan="2">
+		<hr>
+		</td>
+	</tr>
+	<tr>
+		<td align="left" valign="top" width="15%" bgcolor="#E0D0E6">
+		<p align="right"><b>Labels in Scheduled Presentation</b></p>
+		</td>
+		<td valign="top" width="85%">
+		<p align="left">The scheduled presentation shows the week days instead of dates.</p>
+		<p><img border="0" src="images/3.5/task-list-date-bins.png"></p>
+		</td>
+	</tr>	
+	<tr>
+		<td colspan="2">
+		<hr>
+		</td>
+	</tr>
+	<tr>
+		<td align="left" valign="top" width="15%" bgcolor="#E0D0E6">
+		<p align="right"><b>Active Task on Trim</b></p>
+		</td>
+		<td valign="top" width="85%">
+		<p align="left">A widget that is displayed on the window trim shows the active task. Tasks can be activated from the history using the arrow button.</p>
+		<p><img border="0" src="images/3.5/task-trim.png"></p>
+		</td>
+	</tr>	
+	<tr>
+		<td align="left" valign="top" width="15%" bgcolor="#E0D0E6">
+		<p align="right"><b></b></p>
+		</td>
+		<td valign="top" width="85%">
+		<p align="left">The active task widget can be enabled in the Preferences under Tasks.</p>
+		<p><img border="0" src="images/3.5/task-trim-preferences.png"></p>
+		</td>
+	</tr>	
+	<tr>
+		<td colspan="2">
+		<hr>
+		</td>
+	</tr>
+	<tr>
+		<td align="left" valign="top" width="15%" bgcolor="#E0D0E6">
 		<p align="right"><b>Hudson Connector (Incubation): Show Test Failures Only</b></p>
 		</td>
 		<td valign="top" width="85%">
@@ -460,8 +527,16 @@
 
 <p>Pending</p>
 <hr size='1'>
-<p>I20110206-2022</p>
+<p>I20110217-1820</p>
+<ul>
+<li><a href='https://bugs.eclipse.org/bugs/show_bug.cgi?id=175655'>bug 175655</a>: [context] provide an on-hover affordance to supplement Alt+click navigation</li>
+<li><a href='https://bugs.eclipse.org/bugs/show_bug.cgi?id=302015'>bug 302015</a>: [context] do not filter nodes when navigating hierarchies with Alt+click</li>
+<li><a href='https://bugs.eclipse.org/bugs/show_bug.cgi?id=337266'>bug 337266</a>: Only auto-focus views when there is a context</li>
+<li><a href='https://bugs.eclipse.org/bugs/show_bug.cgi?id=303278'>bug 303278</a>: Let the Task Trim Widget finally escape from incubation</li>
+<li><a href='https://bugs.eclipse.org/bugs/show_bug.cgi?id=283200'>bug 283200</a>: [bugzilla] support querying over custom fields</li>
+</ul>
 <hr size='1'>
+<p>I20110206-2022</p>
 <ul>
 <li><a href='https://bugs.eclipse.org/bugs/show_bug.cgi?id=288171'>bug 288171</a>: [api] enable maximize for any task editor part</li>
 <li><a href='https://bugs.eclipse.org/bugs/show_bug.cgi?id=335258'>bug 335258</a>: make o.e.m.htmltext available on update site</li>
