--- a/new/new-weekly.html
+++ b/new/new-weekly.html
@@ -84,12 +84,53 @@
 <table cellpadding="10" cellspacing="0">
 	<tr>
 		<td align="left" valign="top" width="15%" bgcolor="#E0D0E6">
+		<p align="right"><b>Gerrit Connector (Incubation): Reviewers, Dependencies and Submit</b></p>
+		</td>
+		<td valign="top" width="85%">
+		<p align="left">The review editor shows the reviewers and their
+		votes. The requirements section lists outstanding requirements.</p>
+		<p align="left">If sections are collapsed a summary is displayed
+		next to the section header. Dependencies are navigable through
+		hyperlinks.</p>
+		<p><img border="0" src="images/3.5/gerrit-editor-review.png"></p>
+		</td>
+	</tr>	
+	<tr>
+		<td align="left" valign="top" width="15%" bgcolor="#E0D0E6">
+		<p align="right"><b></b></p>
+		</td>
+		<td valign="top" width="85%">
+		<p align="left">Patch sets can now be abandoned, restored, published and submitted.</p>
+		<p><img border="0" src="images/3.5/gerrit-editor-patch-sets.png"></p>
+		</td>
+	</tr>	
+	<tr>
+		<td align="left" valign="top" width="15%" bgcolor="#E0D0E6">
+		<p align="right"><b></b></p>
+		</td>
+		<td valign="top" width="85%">
+		<p align="left">On publish a dialog is displayed for voting and entering a comment.</p>
+		<p><img border="0" src="images/3.5/gerrit-publish.png"></p>
+		</td>
+	</tr>	
+	<tr>
+		<td colspan="2">
+		<hr>
+		</td>
+	</tr>
+	<tr>
+		<td align="left" valign="top" width="15%" bgcolor="#E0D0E6">
 		<p align="right"><b>Task-Focused Interface Improvements</b></p>
 		</td>
 		<td valign="top" width="85%">
-		<p align="left">Focused navigators display an affordance on hover that shows children of the clicked node. Pressing the plus icon is the equivalent of Alt+clicking.
-		When navigating using Alt+click or the hover affordance revealed nodes now remain visible until a node is added to the context.</p>  
-		<p align="left">When a task is activated that does not have a context auto focusing is now disabled by default. The behavior for tasks that have a context is unchanged.</p>
+		<p align="left">Focused navigators display an affordance on hover
+		that shows children of the clicked node. Pressing the plus icon is the
+		equivalent of Alt+clicking. When navigating using Alt+click or the
+		hover affordance revealed nodes now remain visible until a node is
+		added to the context.</p>
+		<p align="left">When a task is activated that does not have a
+		context auto focusing is now disabled by default. The behavior for
+		tasks that have a context is unchanged.</p>
 		<p><img border="0" src="images/3.5/context-hover-affordance.png"></p>
 		</td>
 	</tr>	
@@ -526,6 +567,12 @@
 <p><b>Bugs marked as New &amp; Noteworthy</b></p>
 
 <p>Pending</p>
+<hr size='1'>
+<p>I20110221-0533</p>
+<ul>
+<li><a href='https://bugs.eclipse.org/bugs/show_bug.cgi?id=333945'>bug 333945</a>: show review details in task editor</li>
+<li><a href='https://bugs.eclipse.org/bugs/show_bug.cgi?id=334477'>bug 334477</a>: allow submitting of reviews from task editor</li>
+</ul>
 <hr size='1'>
 <p>I20110217-1820</p>
 <ul>
