NEW - bug 336131: update weekly New & Noteworthy https://bugs.eclipse.org/bugs/show_bug.cgi?id=336131

--- a/new/new-weekly.html
+++ b/new/new-weekly.html
@@ -84,6 +84,20 @@
 <table cellpadding="10" cellspacing="0">
 	<tr>
 		<td align="left" valign="top" width="15%" bgcolor="#E0D0E6">
+		<p align="right"><b>Task-Focused Interface: Merging of Contexts</b></p>
+		</td>
+		<td valign="top" width="85%">
+		<p align="left">When copying a context to a task that already has a context a prompt is displayed to merge or replace the existing context.</p>
+		<p><img border="0" src="images/3.5/context-merge-contexts.png"></p>
+		</td>
+	</tr>	
+	<tr>
+		<td colspan="2">
+		<hr>
+		</td>
+	</tr>
+	<tr>
+		<td align="left" valign="top" width="15%" bgcolor="#E0D0E6">
 		<p align="right"><b>Gerrit Connector (Incubation): Reviewers, Dependencies and Submit</b></p>
 		</td>
 		<td valign="top" width="85%">
@@ -567,6 +581,11 @@
 <p><b>Bugs marked as New &amp; Noteworthy</b></p>
 
 <p>Pending</p>
+<hr size='1'>
+<p>I20110221-1645</p>
+<ul>
+<li><a href='https://bugs.eclipse.org/bugs/show_bug.cgi?id=331172'>bug 331172</a>: warn when copying context to a task that already has context</li>
+</ul>
 <hr size='1'>
 <p>I20110221-0533</p>
 <ul>
