NEW - bug 336131: update weekly New & Noteworthy https://bugs.eclipse.org/bugs/show_bug.cgi?id=336131

--- a/new/new-weekly.html
+++ b/new/new-weekly.html
@@ -87,7 +87,7 @@
 		<p align="right"><b>Task-Focused Interface: Merging of Contexts</b></p>
 		</td>
 		<td valign="top" width="85%">
-		<p align="left">When copying a context to a task that already has a context a prompt is displayed to merge or replace the existing context.</p>
+		<p align="left">Sam Davis contributed an enhancement that displays a prompt to merge or replace an existing context when copying a context between tasks.</p>
 		<p><img border="0" src="images/3.5/context-merge-contexts.png"></p>
 		</td>
 	</tr>	
