--- a/new/new.html
+++ b/new/new.html
@@ -12,10 +12,18 @@
 		<font color="#FFFFFF" size="1">Community Contributions</font></b></td>
 	</tr>
 	<tr>
+		<td bgcolor="#FAF7FB"><font size="1">3.4.3<br>
+		<i>Feb 25, 2011</i></font></td>
+		<td bgcolor="#FAF7FB" align="center">
+		<a href="https://bugs.eclipse.org/bugs/buglist.cgi?query_format=advanced&product=Mylyn&target_milestone=3.4.3">
+		<font size="1">13</font><br><font size="1">bugs</font></a></td>
+		<td bgcolor="#FAF7FB"><font size="1">Sam Davis, Thomas Ehrnhoefer, Carsten Reckord and Benjamin Muskalla provided fixes.</font></td>
+	</tr>
+	<tr>
 		<td bgcolor="#FAF7FB"><font size="1">3.4.2<br>
 		<i>Sep 24, 2010</i></font></td>
 		<td bgcolor="#FAF7FB" align="center">
-		<a href="https://bugs.eclipse.org/bugs/buglist.cgi?query_format=advanced&short_desc_type=allwordssubstr&short_desc=&classification=Tools&product=Mylyn&target_milestone=3.4.2&long_desc_type=allwordssubstr&long_desc=&bug_file_loc_type=allwordssubstr&bug_file_loc=&status_whiteboard_type=allwordssubstr&status_whiteboard=&keywords_type=allwords&keywords=&emailtype1=substring&email1=&emailtype2=substring&email2=&bugidtype=include&bug_id=&votes=&chfieldfrom=&chfieldto=&chfield=resolution&chfieldvalue=&cmdtype=doit&order=Reuse+same+sort+as+last+time&field0-0-0=noop&type0-0-0=noop&value0-0-0=">
+		<a href="https://bugs.eclipse.org/bugs/buglist.cgi?query_format=advanced&product=Mylyn&target_milestone=3.4.2">
 		<font size="1">16</font><br><font size="1">bugs</font></a></td>
 		<td bgcolor="#FAF7FB"><font size="1">Service release.</font></td>
 	</tr>
@@ -23,7 +31,7 @@
 		<td bgcolor="#FAF7FB"><font size="1">3.4.1<br>
 		<i>Aug 4, 2010</i></font></td>
 		<td bgcolor="#FAF7FB" align="center">
-		<a href="https://bugs.eclipse.org/bugs/buglist.cgi?query_format=advanced&short_desc_type=allwordssubstr&short_desc=&classification=Tools&product=Mylyn&target_milestone=3.4.1&long_desc_type=allwordssubstr&long_desc=&bug_file_loc_type=allwordssubstr&bug_file_loc=&status_whiteboard_type=allwordssubstr&status_whiteboard=&keywords_type=allwords&keywords=&emailtype1=substring&email1=&emailtype2=substring&email2=&bugidtype=include&bug_id=&votes=&chfieldfrom=&chfieldto=&chfield=resolution&chfieldvalue=&cmdtype=doit&order=Reuse+same+sort+as+last+time&field0-0-0=noop&type0-0-0=noop&value0-0-0=">
+		<a href="https://bugs.eclipse.org/bugs/buglist.cgi?query_format=advanced&product=Mylyn&target_milestone=3.4.1">
 		<font size="1">34</font><br><font size="1">bugs</font></a></td>
 		<td bgcolor="#FAF7FB"><font size="1">Julio Gesser provided a fix for sorting of the Task List and Dominika Lacka provided documentation updates.</font></td>
 	</tr>
@@ -31,7 +39,7 @@
 		<td bgcolor="#E0D0E6"><font size="1">3.4<br>
 		<i>Jun 23, 2010</i></font></td>
 		<td bgcolor="#E0D0E6" align="center">
-		<a href="https://bugs.eclipse.org/bugs/buglist.cgi?query_format=advanced&short_desc_type=allwordssubstr&short_desc=&classification=Tools&product=Mylyn&target_milestone=3.4&long_desc_type=allwordssubstr&long_desc=&bug_file_loc_type=allwordssubstr&bug_file_loc=&status_whiteboard_type=allwordssubstr&status_whiteboard=&keywords_type=allwords&keywords=&emailtype1=substring&email1=&emailtype2=substring&email2=&bugidtype=include&bug_id=&votes=&chfieldfrom=&chfieldto=&chfield=resolution&chfieldvalue=&cmdtype=doit&order=Reuse+same+sort+as+last+time&field0-0-0=noop&type0-0-0=noop&value0-0-0=">
+		<a href="https://bugs.eclipse.org/bugs/buglist.cgi?query_format=advanced&product=Mylyn&target_milestone=3.4">
 		<font size="1">205</font><br><font size="1">bugs</font></a></td>
 		<td bgcolor="#E0D0E6"><font size="1">Peter Stibrany contributed improvements for the handling of attachments. Flavio Donze reduced dependencies of the tasks framework. Abner Ballardo provided user interface improvements. Additional contributions were provided by Kevin Sawicki, Steve Elsemore, Andreas Hoehmann, Jacques Lescot, Benjamin Muskalla, Attila Sz&ouml;kr&ouml;ny&ouml;s and Thomas Ehrnhoefer.</font></td>
 	</tr>
@@ -39,7 +47,7 @@
 		<td bgcolor="#FAF7FB"><font size="1">3.3.3<br>
 		<i>Mar 31, 2010</i></font></td>
 		<td bgcolor="#FAF7FB" align="center">
-		<a href="https://bugs.eclipse.org/bugs/buglist.cgi?query_format=advanced&short_desc_type=allwordssubstr&short_desc=&classification=Tools&product=Mylyn&target_milestone=3.3.3&long_desc_type=allwordssubstr&long_desc=&bug_file_loc_type=allwordssubstr&bug_file_loc=&status_whiteboard_type=allwordssubstr&status_whiteboard=&keywords_type=allwords&keywords=&emailtype1=substring&email1=&emailtype2=substring&email2=&bugidtype=include&bug_id=&votes=&chfieldfrom=&chfieldto=&chfield=resolution&chfieldvalue=&cmdtype=doit&order=Reuse+same+sort+as+last+time&field0-0-0=noop&type0-0-0=noop&value0-0-0=">
+		<a href="https://bugs.eclipse.org/bugs/buglist.cgi?query_format=advanced&product=Mylyn&target_milestone=3.3.3">
 		<font size="1">3</font><br><font size="1">bugs</font></a></td>
 		<td bgcolor="#FAF7FB"><font size="1">Service release.</font></td>
 	</tr>
@@ -47,7 +55,7 @@
 		<td bgcolor="#FAF7FB"><font size="1">3.3.2<br>
 		<i>Feb 23, 2010</i></font></td>
 		<td bgcolor="#FAF7FB" align="center">
-		<a href="https://bugs.eclipse.org/bugs/buglist.cgi?query_format=advanced&short_desc_type=allwordssubstr&short_desc=&classification=Tools&product=Mylyn&target_milestone=3.3.2&long_desc_type=allwordssubstr&long_desc=&bug_file_loc_type=allwordssubstr&bug_file_loc=&status_whiteboard_type=allwordssubstr&status_whiteboard=&keywords_type=allwords&keywords=&emailtype1=substring&email1=&emailtype2=substring&email2=&bugidtype=include&bug_id=&votes=&chfieldfrom=&chfieldto=&chfield=resolution&chfieldvalue=&cmdtype=doit&order=Reuse+same+sort+as+last+time&field0-0-0=noop&type0-0-0=noop&value0-0-0=">
+		<a href="https://bugs.eclipse.org/bugs/buglist.cgi?query_format=advanced&product=Mylyn&target_milestone=3.3.2">
 		<font size="1">37</font><br><font size="1">bugs</font></a></td>
 		<td bgcolor="#FAF7FB"><font size="1">Service release.</font></td>
 	</tr>
@@ -55,7 +63,7 @@
 		<td bgcolor="#FAF7FB"><font size="1">3.3.1<br>
 		<i>Dec 15, 2009</i></font></td>
 		<td bgcolor="#FAF7FB" align="center">
-		<a href="https://bugs.eclipse.org/bugs/buglist.cgi?query_format=advanced&short_desc_type=allwordssubstr&short_desc=&classification=Tools&product=Mylyn&target_milestone=3.3.1&long_desc_type=allwordssubstr&long_desc=&bug_file_loc_type=allwordssubstr&bug_file_loc=&status_whiteboard_type=allwordssubstr&status_whiteboard=&keywords_type=allwords&keywords=&emailtype1=substring&email1=&emailtype2=substring&email2=&bugidtype=include&bug_id=&votes=&chfieldfrom=&chfieldto=&chfield=resolution&chfieldvalue=&cmdtype=doit&order=Reuse+same+sort+as+last+time&field0-0-0=noop&type0-0-0=noop&value0-0-0=">
+		<a href="https://bugs.eclipse.org/bugs/buglist.cgi?query_format=advanced&product=Mylyn&target_milestone=3.3.1">
 		<font size="1">38</font><br><font size="1">bugs</font></a></td>
 		<td bgcolor="#FAF7FB"><font size="1">Benjamin Muskalla contributed bug fixes.</font></td>
 	</tr>
@@ -63,8 +71,8 @@
 		<td bgcolor="#FAF7FB"><font size="1">3.3<br>
 		<i>Oct 26, 2009</i></font></td>
 		<td bgcolor="#FAF7FB" align="center">
-		<a href="https://bugs.eclipse.org/bugs/buglist.cgi?query_format=advanced&short_desc_type=allwordssubstr&short_desc=&classification=Tools&product=Mylyn&target_milestone=3.3&long_desc_type=allwordssubstr&long_desc=&bug_file_loc_type=allwordssubstr&bug_file_loc=&status_whiteboard_type=allwordssubstr&status_whiteboard=&keywords_type=allwords&keywords=&emailtype1=substring&email1=&emailtype2=substring&email2=&bugidtype=include&bug_id=&votes=&chfieldfrom=&chfieldto=&chfield=resolution&chfieldvalue=&cmdtype=doit&order=Reuse+same+sort+as+last+time&field0-0-0=noop&type0-0-0=noop&value0-0-0=">
-		<font size="1">166</font><br><font size="1">bugs</font></a></td>
+		<a href="https://bugs.eclipse.org/bugs/buglist.cgi?query_format=advanced&product=Mylyn&target_milestone=3.3">
+		<font size="1">156</font><br><font size="1">bugs</font></a></td>
 		<td bgcolor="#FAF7FB"><font size="1">Thomas Ehrnhoefer and Pawel Niewiadomski contributed numerous bug fixes and improvements for the JIRA connector. Additional contributions were provided by Jacek Jaroczynski, Benjamin Muskalla, Martin Kurz, David Shepherd and Emerson Murphy-Hill.</font></td>
 	</tr>
 </table>
