fixed incubator URL

--- a/new/new-weekly.html
+++ b/new/new-weekly.html
@@ -73,7 +73,7 @@
 	3.5, 3.6, 3.7)<br><br></li>
 	
 	<li>Incubator Repository:<br><br>
-	&nbsp;&nbsp;<b><font color="#666666">http://</font>download.eclipse.org/mylyn/snapshots/incubator/3.5</b>&nbsp;&nbsp;(Eclipse
+	&nbsp;&nbsp;<b><font color="#666666">http://</font>download.eclipse.org/mylyn/incubator/3.5</b>&nbsp;&nbsp;(Eclipse
 	3.5, 3.6, 3.7)</li>
 </ul>
 
