--- a/new/new-3.5.html
+++ b/new/new-3.5.html
@@ -15,7 +15,7 @@
 		<td bgcolor="#FAF7FB"><font size="1">3.5<br>
 		<i>March 16, 2011</i></font></td>
 		<td bgcolor="#FAF7FB" align="center">
-		<a href="/doc/plan-3.5.html">
+		<a href="/doc/mylyn/plan-3.5.html">
 		<font size="1">352</font><br><font size="1">bugs</font></a></td>
 		<td bgcolor="#FAF7FB"><font size="1"></font></td>
 	</tr>
@@ -48,14 +48,12 @@
 <p><b>Note: </b>The Mylyn weekly update sites have moved:</p>
 
 <ul>
-	<li>Main Repository:<br><br>
-	&nbsp;&nbsp;<b><font color="#666666">http://</font>download.eclipse.org/mylyn/snapshots/weekly</b>&nbsp;&nbsp;(Eclipse
+	<li>Repository for Mylyn 3.5:<br><br>
+	&nbsp;&nbsp;<b><font color="#666666">http://</font>download.eclipse.org/mylyn/releases/3.5</b>&nbsp;&nbsp;(Eclipse
 	3.5, 3.6, 3.7)<br><br></li>
-	
-	<li>Incubator Repository:<br><br>
-	&nbsp;&nbsp;<b><font color="#666666">http://</font>download.eclipse.org/mylyn/incubator/3.5</b>&nbsp;&nbsp;(Eclipse
-	3.5, 3.6, 3.7)</li>
 </ul>
+
+<p>See the <a href="/mylyn/downloads/">download page</a> for other changes.</p> 
 
 <p>Mylyn 3.5 requires <a href="https://bugs.eclipse.org/bugs/show_bug.cgi?id=313436">Eclipse 3.5 or later</a>.</p>
 
@@ -141,7 +139,7 @@ longer.</p>
 <table cellpadding="10" cellspacing="0" width="100%">
 	<tr>
 		<td align="left" valign="top" width="15%" bgcolor="#E0D0E6">
-		<p align="right"><b>Templates</b></p>
+		<p align="right"><b>Key-Binding Improvements</b></p>
 		</td>
 		<td valign="top" width="85%">
 		<p align="left">
