NEW - bug 340105: create New & Noteworthy for Mylyn 3.5 https://bugs.eclipse.org/bugs/show_bug.cgi?id=340105

--- a/new/new-3.5.html
+++ b/new/new-3.5.html
@@ -1,3 +1,4 @@
+
 <html>
 <body bgcolor="FFFFFF">
 
@@ -247,7 +248,7 @@ longer.</p>
 		</td>
 		<td valign="top" width="85%">
 		<p align="left">Builds can be opened in an editor that displays build details on a single page: Status, tests results, artifacts and code changes.</p>
-		<p><img border="0" src="images/3.5/builds-editor.png"></p>
+		<p><img border="0" src="images/3.5/builds-editor3.png"></p>
 		</td>
 	</tr>	
 	<tr>
