--- a/new/new-3.5.html
+++ b/new/new-3.5.html
@@ -237,9 +237,9 @@
 		<p align="right"><b>Automatic Server Discovery</b></p>
 		</td>
 		<td valign="top" width="85%">
-		<p align="left">The connector monitors the local network and displays
+		<p align="left">The Hudson connector monitors the local network and displays
 					a service message in the Builds view when a new server is
-					discovered. Selecting jobs for monitoring only takes a few clicks.</p>
+					discovered. Configuring discovered servers only takes a few clicks.</p>
 		<p><img border="0" src="images/3.5/hudson-autodiscovery.png"></p>
 		</td>
 	</tr>	
@@ -253,7 +253,7 @@
 		<p align="right"><b>Build History</b></p>
 		</td>
 		<td valign="top" width="85%">
-		<p align="left">When History is selected in the popup menu of the Builds view all builds of a plan are shown in the History view. Builds are displayed in an editor when opened from the History.</p>
+		<p align="left">When History is selected from the popup menu of the Builds view all builds of a plan are shown in the History view. Builds are displayed in an editor when opened from the History.</p>
 		<p><img border="0" src="images/3.5/build-history.png"></p>
 		</td>
 	</tr>	
@@ -267,17 +267,22 @@
 		<p align="right"><b>Build Editor</b></p>
 		</td>
 		<td valign="top" width="85%">
-		<p align="left">Builds can be opened in an editor that displays build details on a single page: Status, tests results, artifacts and code changes.</p>
+		<p align="left">The builds editor shows build details on a single page: Status, tests results, artifacts and code changes.</p>
 		<p><img border="0" src="images/3.5/builds-editor3.png"></p>
 		</td>
 	</tr>	
+	<tr>
+		<td colspan="2">
+		<hr>
+		</td>
+	</tr>
 	<tr>
 		<td align="left" valign="top" width="15%" bgcolor="#E0D0E6">
 		<p align="right"><b>Test Integration</b></p>
 		</td>
 		<td valign="top" width="85%">
-		<p align="left">The test results of the last build can be viewed by selecting Show Test Results from the popup menu in the Builds view. Tests can be rerun locally from the JUnit view.</p>
-		<p><img border="0" src="images/3.5/builds-test-results.png"></p>
+		<p align="left">The build editor shows tests results in a tree that opens the corresponding Java file on double click. The list of tests can be filtered to show failures only.</p>
+		<p><img border="0" src="images/3.5/builds-editor-test-results.png"></p>
 		</td>
 	</tr>	
 	<tr>
@@ -285,8 +290,8 @@
 		<p align="right"><b></b></p>
 		</td>
 		<td valign="top" width="85%">
-		<p align="left">The build editor shows tests results in a tree that opens the corresponding Java file on double click. The list of tests can be filtered to show failures only.</p>
-		<p><img border="0" src="images/3.5/builds-editor-test-results.png"></p>
+		<p align="left">The test results of the last build can be viewed by selecting Show Test Results from the popup menu in the Builds view. Tests can be rerun locally from the JUnit view.</p>
+		<p><img border="0" src="images/3.5/builds-test-results.png"></p>
 		</td>
 	</tr>	
 	<tr>
@@ -299,7 +304,7 @@
 		<p align="right"><b>Running Builds</b></p>
 		</td>
 		<td valign="top" width="85%">
-		<p align="left">If a build requires parameters a dialog is displayed when it is run.</p>
+		<p align="left">Builds can be triggered from the builds editor or view. If a build requires parameters a dialog is displayed when it is run.</p>
 		<p><img border="0" src="images/3.5/hudson-parameters.png"></p>
 		</td>
 	</tr>	
