NEW - bug 340105: create New & Noteworthy for Mylyn 3.5 https://bugs.eclipse.org/bugs/show_bug.cgi?id=340105

--- a/new/new-3.5.html
+++ b/new/new-3.5.html
@@ -70,12 +70,12 @@
 		<td valign="top" width="85%">
 		<p align="left">By default all subtasks are shown in the Task List.
 					This can lead to an overload of incomings when connecting to
-					repositories that structure tasks in deep hierarchies. De-selecting
+					repositories that structure tasks in hierarchies. De-selecting
 					"Show Subtasks not Matching Queries" under "Advanced Filters" in
-					the Task List will only show subtasks directly matched by queries.
+					the Task List filters subtasks not directly matched by queries.
 					All subtasks are still cached to make them accessible for searching
 					and quick offline access but subtasks that you may not be
-					interested in don't overload the Task List any longer.</p>
+					interested in do not overload the Task List any longer.</p>
 		<p><img border="0" src="images/3.5/task-list-filters.png"></p>
 		</td>
 	</tr>	
@@ -163,11 +163,11 @@
 		</td>
 		<td valign="top" width="85%">
 		<p align="left">
-					The Hudson connector (supports Jenkins), developed by Markus
-					Knittig as part of a <a href="http://wiki.eclipse.org/Mylyn/Hudson_Integration_for_Mylyn" target="_new">Google Summer of Code project</a>,
-					shows the status of selected Hudson and Jenkins jobs in a Builds view. For each job the
+					The Hudson connector which also supports Jenkins was developed by Markus
+					Knittig as part of a <a href="http://wiki.eclipse.org/Mylyn/Hudson_Integration_for_Mylyn" target="_new">Google Summer of Code project</a> project.
+					It shows the status of selected jobs in a Builds view. For each job the
 					time of the last build is shown and the weather icon indicates how
-					frequently a build has failed in the recent past.
+					frequently a build has failed in the recent history.
 				</p>
 		<p><img border="0" src="images/3.5/builds-view2.png"></p>
 		</td>
@@ -177,7 +177,7 @@
 		<p align="right"><b></b></p>
 		</td>
 		<td valign="top" width="85%">
-		<p align="left">The tooltip in the Builds shows details about the plan and last build.</p>
+		<p align="left">The tooltip in the view shows details about the plan and last build.</p>
 		<p><img border="0" src="images/3.5/hudson-tooltip.png"></p>
 		</td>
 	</tr>	
