NEW - bug 340105: create New & Noteworthy for Mylyn 3.5 https://bugs.eclipse.org/bugs/show_bug.cgi?id=340105

--- a/new/new.html
+++ b/new/new.html
@@ -62,7 +62,7 @@
 <p>&nbsp;</p>
 <h2><a name="task-list">Task List</a></h2>
 
-<table cellpadding="10" cellspacing="0">
+<table cellpadding="10" cellspacing="0" width="100%">
 	<tr>
 		<td align="left" valign="top" width="15%" bgcolor="#E0D0E6">
 		<p align="right"><b>Filter Tasks not Matching Queries</b></p>
@@ -124,7 +124,7 @@
 <p>&nbsp;</p>
 <h2><a name="task-focused-interface">Task-Focused Interface</a></h2>
 
-<table cellpadding="10" cellspacing="0">
+<table cellpadding="10" cellspacing="0" width="100%">
 	<tr>
 		<td align="left" valign="top" width="15%" bgcolor="#E0D0E6">
 		<p align="right"><b>Merging of Contexts</b></p>
@@ -342,7 +342,7 @@
 <p>&nbsp;</p>
 <h2><a name="bugzilla">Bugzilla Connector</a></h2>
 
-<table cellpadding="10" cellspacing="0">
+<table cellpadding="10" cellspacing="0" width="100%">
 	<tr>
 		<td align="left" valign="top" width="15%" bgcolor="#E0D0E6">
 		<p align="right"><b>Boolean Charts</b></p>
@@ -386,7 +386,7 @@
 <p>&nbsp;</p>
 <h2><a name="trac">Trac Connector</a></h2>
 
-<table cellpadding="10" cellspacing="0">
+<table cellpadding="10" cellspacing="0" width="100%">
 	<tr>
 		<td align="left" valign="top" width="15%" bgcolor="#E0D0E6">
 		<p align="right"><b>Mid-air collision detection support</b></p>
@@ -418,7 +418,7 @@
 
 <p>See <a href="http://wiki.eclipse.org/Mylyn/Porting_Guide#Notable_API_changes_in_3.5" target="_new">porting guide</a> for additional notes on API changes.</p>
 
-<table cellpadding="10" cellspacing="0">
+<table cellpadding="10" cellspacing="0" width="100%">
 	<tr>
 		<td align="left" valign="top" width="15%" bgcolor="#E0D0E6">
 		<p align="right"><b>Team Repositories View</b></p>
