NEW - bug 340105: create New & Noteworthy for Mylyn 3.5 https://bugs.eclipse.org/bugs/show_bug.cgi?id=340105

--- a/new/new.html
+++ b/new/new.html
@@ -17,7 +17,7 @@
 		<td bgcolor="#FAF7FB" align="center">
 		<a href="/doc/mylyn/plan-3.5.html">
 		<font size="1">352</font><br><font size="1">bugs</font></a></td>
-		<td bgcolor="#FAF7FB"><font size="1"></font></td>
+		<td bgcolor="#FAF7FB"><font size="1">Sam Davis and Thomas Ehrnhoefer provided several enhancements and bug fixes. Markus Knittig contributed the initial implementation of the Hudson/Jenkins connector. Additional contributions were provided by Charley Wang, Pawel Niewiadomski, Kevin Sawicki and David Shepherd.</font></td>
 	</tr>
 </table>
 
@@ -38,7 +38,7 @@
 <ul>
 	<li><a href="#task-list">Task List</a></li>
 	<li><a href="#task-focused-interface">Task-Focused Interface</a></li>
-	<li><a href="#wikitext">WikiText</a></li>
+	<!-- <li><a href="#wikitext">WikiText</a></li>  -->
 	<li><a href="#hudson">Hudson/Jenkins Connector</a></li>
 	<li><a href="#bugzilla">Bugzilla Connector</a></li>
 	<li><a href="#trac">Trac Connector</a></li>
@@ -136,6 +136,7 @@
 	</tr>	
 </table>
 
+<!-- 
 <p>&nbsp;</p>
 <h2><a name="wikitext">WikiText</a></h2>
 
@@ -151,7 +152,7 @@
 		</td>
 	</tr>
 </table>
-
+ -->
 
 <p>&nbsp;</p>
 <h2><a name="hudson">Hudson/Jenkins Connector</a></h2>
