NEW - bug 340105: create New & Noteworthy for Mylyn 3.5 https://bugs.eclipse.org/bugs/show_bug.cgi?id=340105

--- a/new/new.html
+++ b/new/new.html
@@ -48,8 +48,8 @@
 <p><b>Note: </b>The Mylyn update sites has moved:</p>
 
 <ul>
-	<li><b><font color="#666666">http://</font>download.eclipse.org/mylyn/releases/3.5</b>&nbsp;&nbsp;(Eclipse
-	3.5, 3.6, 3.7)<br><br></li>
+	<li><b><font color="#666666">http://</font>download.eclipse.org/mylyn/releases/latest</b>&nbsp;&nbsp;(Eclipse
+	3.5, 3.6, 3.7)</li>
 </ul>
 
 <p>See the <a href="/mylyn/downloads/">download page</a> for additional locations.</p> 
