--- a/new/new-3.5.html
+++ b/new/new-3.5.html
@@ -16,8 +16,8 @@
 		<i>March 16, 2011</i></font></td>
 		<td bgcolor="#FAF7FB" align="center">
 		<a href="/doc/mylyn/plan-3.5.html">
-		<font size="1">352</font><br><font size="1">bugs</font></a></td>
-		<td bgcolor="#FAF7FB"><font size="1"></font></td>
+		<font size="1">350</font><br><font size="1">bugs</font></a></td>
+		<td bgcolor="#FAF7FB"><font size="1">Sam Davis and Thomas Ehrnhoefer provided several enhancements and bug fixes. Markus Knittig contributed the initial implementation of the Hudson/Jenkins connector. Additional contributions were provided by Charley Wang, Pawel Niewiadomski, Kevin Sawicki and David Shepherd.</font></td>
 	</tr>
 </table>
 
@@ -38,7 +38,7 @@
 <ul>
 	<li><a href="#task-list">Task List</a></li>
 	<li><a href="#task-focused-interface">Task-Focused Interface</a></li>
-	<li><a href="#wikitext">WikiText</a></li>
+	<!-- <li><a href="#wikitext">WikiText</a></li>  -->
 	<li><a href="#hudson">Hudson/Jenkins Connector</a></li>
 	<li><a href="#bugzilla">Bugzilla Connector</a></li>
 	<li><a href="#trac">Trac Connector</a></li>
@@ -48,8 +48,8 @@
 <p><b>Note: </b>The Mylyn update sites has moved:</p>
 
 <ul>
-	<li><b><font color="#666666">http://</font>download.eclipse.org/mylyn/releases/3.5</b>&nbsp;&nbsp;(Eclipse
-	3.5, 3.6, 3.7)<br><br></li>
+	<li><b><font color="#666666">http://</font>download.eclipse.org/mylyn/releases/latest</b>&nbsp;&nbsp;(Eclipse
+	3.5, 3.6, 3.7)</li>
 </ul>
 
 <p>See the <a href="/mylyn/downloads/">download page</a> for additional locations.</p> 
@@ -62,7 +62,7 @@
 <p>&nbsp;</p>
 <h2><a name="task-list">Task List</a></h2>
 
-<table cellpadding="10" cellspacing="0">
+<table cellpadding="10" cellspacing="0" width="100%">
 	<tr>
 		<td align="left" valign="top" width="15%" bgcolor="#E0D0E6">
 		<p align="right"><b>Filter Tasks not Matching Queries</b></p>
@@ -124,7 +124,7 @@
 <p>&nbsp;</p>
 <h2><a name="task-focused-interface">Task-Focused Interface</a></h2>
 
-<table cellpadding="10" cellspacing="0">
+<table cellpadding="10" cellspacing="0" width="100%">
 	<tr>
 		<td align="left" valign="top" width="15%" bgcolor="#E0D0E6">
 		<p align="right"><b>Merging of Contexts</b></p>
@@ -136,6 +136,7 @@
 	</tr>	
 </table>
 
+<!-- 
 <p>&nbsp;</p>
 <h2><a name="wikitext">WikiText</a></h2>
 
@@ -151,7 +152,7 @@
 		</td>
 	</tr>
 </table>
-
+ -->
 
 <p>&nbsp;</p>
 <h2><a name="hudson">Hudson/Jenkins Connector</a></h2>
@@ -342,7 +343,7 @@
 <p>&nbsp;</p>
 <h2><a name="bugzilla">Bugzilla Connector</a></h2>
 
-<table cellpadding="10" cellspacing="0">
+<table cellpadding="10" cellspacing="0" width="100%">
 	<tr>
 		<td align="left" valign="top" width="15%" bgcolor="#E0D0E6">
 		<p align="right"><b>Boolean Charts</b></p>
@@ -386,7 +387,7 @@
 <p>&nbsp;</p>
 <h2><a name="trac">Trac Connector</a></h2>
 
-<table cellpadding="10" cellspacing="0">
+<table cellpadding="10" cellspacing="0" width="100%">
 	<tr>
 		<td align="left" valign="top" width="15%" bgcolor="#E0D0E6">
 		<p align="right"><b>Mid-air collision detection support</b></p>
@@ -418,7 +419,7 @@
 
 <p>See <a href="http://wiki.eclipse.org/Mylyn/Porting_Guide#Notable_API_changes_in_3.5" target="_new">porting guide</a> for additional notes on API changes.</p>
 
-<table cellpadding="10" cellspacing="0">
+<table cellpadding="10" cellspacing="0" width="100%">
 	<tr>
 		<td align="left" valign="top" width="15%" bgcolor="#E0D0E6">
 		<p align="right"><b>Team Repositories View</b></p>
