RESOLVED - bug 340105: create New & Noteworthy for Mylyn 3.5 https://bugs.eclipse.org/bugs/show_bug.cgi?id=340105

--- a/new/new.html
+++ b/new/new.html
@@ -163,13 +163,10 @@
 		<p align="right"><b>Hudson/Jenkins Connector (Incubation)</b></p>
 		</td>
 		<td valign="top" width="85%">
-		<p align="left">
-					The Hudson connector which also supports Jenkins was developed by Markus
-					Knittig as part of a <a href="http://wiki.eclipse.org/Mylyn/Hudson_Integration_for_Mylyn" target="_new">Google Summer of Code project</a> project.
-					It shows the status of selected jobs in a Builds view. For each job the
-					time of the last build is shown and the weather icon indicates how
-					frequently a build has failed in the recent history.
-				</p>
+		<p align="left">The Hudson connector which also supports Jenkins shows
+					the status of selected jobs in a Builds view. For each job the time
+					of the last build is shown and the weather icon indicates how
+					frequently a build has failed in the recent history.</p>
 		<p><img border="0" src="images/3.5/builds-view2.png"></p>
 		</td>
 	</tr>	
