RESOLVED - bug 340105: create New & Noteworthy for Mylyn 3.5 https://bugs.eclipse.org/bugs/show_bug.cgi?id=340105

--- a/new/new.html
+++ b/new/new.html
@@ -130,7 +130,7 @@
 		<p align="right"><b>Merging of Contexts</b></p>
 		</td>
 		<td valign="top" width="85%">
-		<p align="left">Sam Davis contributed an enhancement that displays a prompt to merge or replace an existing context when copying a context between tasks.</p>
+		<p align="left">When copying a context between tasks a prompt to merge or replace an existing context is displayed.</p>
 		<p><img border="0" src="images/3.5/context-merge-contexts.png"></p>
 		</td>
 	</tr>	
