NEW - bug 338264: [release] plan Mylyn 3.6 release https://bugs.eclipse.org/bugs/show_bug.cgi?id=338264

--- a/new/new.html
+++ b/new/new.html
@@ -127,6 +127,27 @@
 <table cellpadding="10" cellspacing="0" width="100%">
 	<tr>
 		<td align="left" valign="top" width="15%" bgcolor="#E0D0E6">
+		<p align="right"><b>Alt+click Replacement</b></p>
+		</td>
+		<td valign="top" width="85%">
+		<p align="left">Focused navigators display an affordance on hover
+		that shows children of the clicked node. Pressing the plus icon is the
+		equivalent of Alt+clicking. When navigating using Alt+click or the
+		hover affordance revealed nodes now remain visible until a node is
+		added to the context.</p>
+		<p align="left">When a task is activated that does not have a
+		context auto focusing is now disabled by default. The behavior for
+		tasks that have a context is unchanged.</p>
+		<p><img border="0" src="images/3.5/context-hover-affordance.png"></p>
+		</td>
+	</tr>	
+	<tr>
+		<td colspan="2">
+		<hr>
+		</td>
+	</tr>
+	<tr>
+		<td align="left" valign="top" width="15%" bgcolor="#E0D0E6">
 		<p align="right"><b>Merging of Contexts</b></p>
 		</td>
 		<td valign="top" width="85%">
