--- a/new/new.html
+++ b/new/new.html
@@ -12,6 +12,13 @@
 		<font color="#FFFFFF" size="1">Community Contributions</font></b></td>
 	</tr>
 	<tr>
+		<td bgcolor="#FAF7FB"><font size="1">3.5.1<br>
+		<i>Apr 22, 2011</i></font></td>
+		<td bgcolor="#FAF7FB" align="center">
+		<font size="1">13</font><br><font size="1">bugs</font></td>
+		<td bgcolor="#FAF7FB"><font size="1">Service release.</font></td>
+	</tr>
+	<tr>
 		<td bgcolor="#FAF7FB"><font size="1">3.5<br>
 		<i>March 16, 2011</i></font></td>
 		<td bgcolor="#FAF7FB" align="center">
